[package]
name = "gameplay_terrain"
description = "Terrain-specific components"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
application_state = { workspace = true }
bevy = { workspace = true }
cdda_json_files = { workspace = true }
gameplay_cdda = { workspace = true }
gameplay_common = { workspace = true }
gameplay_location = { workspace = true }

[dev-dependencies]
gameplay_cdda = { workspace = true }

[lints]
workspace = true